[package]
name = "zwhisper-ipc"
description = "zwhisper D-Bus interface contract (Recorder1 + Profiles1)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
readme.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
zbus = { workspace = true }
zvariant = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
