[package]
name = "zwhisper-settings"
description = "On-demand FLTK settings GUI for zwhisper (profiles, models, whisper-cli, hotkey)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
# Internal crates — Settings reads/writes profile files via core,
# talks to the daemon via the IPC proxies, and reuses the M6 portal
# adapter for the hotkey rebind tab.
zwhisper-core = { path = "../zwhisper-core" }
zwhisper-ipc = { path = "../zwhisper-ipc" }
zwhisper-hotkey = { path = "../zwhisper-hotkey", features = ["portal"] }

# GUI (workspace dep adds `fltk-bundled` + `use-wayland`).
fltk = { workspace = true }

# Async runtime — the model downloader and D-Bus calls run on a
# multi-thread tokio runtime owned by `runtime.rs`. The features
# enabled here are a strict superset of what M7 needs:
# rt-multi-thread (workers), macros (#[tokio::test]), fs (atomic
# rename helpers), sync (mpsc + CancellationToken via tokio-util),
# time (timeout for portal bind), io-util (AsyncWriteExt for the
# downloader's chunk flush).
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "sync", "time", "io-util"] }
# `tokio-util::sync::CancellationToken` powers the cooperative
# cancel path on window-close mid-download (M7-plan § 2.4). The
# `sync` module is unconditionally compiled by tokio-util, so we
# inherit the workspace feature set (`io`) verbatim.
tokio-util = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }

# Profile serialisation — round-trips formatting / comments so a
# settings save does not strip user annotations.
toml_edit = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

# `serde_json` powers the model downloader's `.part.meta.json`
# crash-resume sidecar (M7-plan A3 mitigation).
serde_json = { workspace = true }

# `futures_util::StreamExt::next` drives the chunk-by-chunk
# streaming loop in `download.rs` (M7-plan § C3).
futures-util = { workspace = true }

# D-Bus — claim the `cz.zajca.Zwhisper1.Settings` name for
# single-instance enforcement (M7-plan § 17) and call
# `Profiles1.reload` after a profile write.
zbus = { workspace = true }

# Errors / logging
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }

# XDG paths (`~/.config/zwhisper/models.toml`, models dir).
dirs = { workspace = true }

# `tempfile::NamedTempFile::persist` powers atomic writes for both
# the profile editor (Group B) and the model downloader's final
# rename of `<models_dir>/.partial/<name>.bin.part` →
# `<models_dir>/<name>.bin` (M7-plan § C3, DoD #7). Co-locating the
# tempfile with the destination is what guarantees same-filesystem
# rename per D4.
tempfile = { workspace = true }

# `async_trait` lets the profile editor's D-Bus client facades
# (`ReloadCall`, `GetRecording`) be defined as object-safe traits so
# unit tests in `tabs::profile` can swap real proxies for fakes.
async-trait = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
# `tracing_test::traced_test` captures `tracing` events so save-flow
# tests can assert that callback errors get logged (DoD A2 mitigation).
tracing-test = { workspace = true }

[lints]
workspace = true
