[package]
name = "zwhisperd"
description = "zwhisper recording daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
readme.workspace = true

[[bin]]
name = "zwhisperd"
path = "src/main.rs"

[dependencies]
zwhisper-core = { path = "../zwhisper-core" }
zwhisper-ipc = { path = "../zwhisper-ipc" }
zbus = { workspace = true }
zvariant = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
signal-hook-tokio = { workspace = true }
signal-hook = "0.4"
gstreamer = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
which = { workspace = true }
tokio = { workspace = true, features = ["signal", "rt", "macros", "time", "sync", "process", "io-util", "fs"] }
zwhisper-core = { path = "../zwhisper-core" }
dirs = { workspace = true }

[lints]
workspace = true
