[package]
name = "zwhisperd"
description = "zwhisper recording daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
readme.workspace = true

[[bin]]
name = "zwhisperd"
path = "src/main.rs"

[dependencies]
zwhisper-core = { path = "../zwhisper-core" }
zwhisper-ipc = { path = "../zwhisper-ipc" }
zbus = { workspace = true }
zvariant = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
signal-hook-tokio = { workspace = true }
signal-hook = "0.4"
gstreamer = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# RFC-daemon-role F2.3: liveness probe + process-group reap of an
# orphaned whisper-cli subprocess during startup recovery. Confined to
# `history::reap` behind a scoped `#[allow(unsafe_code)]`.
libc = { workspace = true }

[features]
# Compile the in-process Parakeet backend into the daemon so
# `auto = true` parakeet profiles transcribe after recording. Default-
# OFF for the same reason as the CLI (pulls ONNX Runtime at build time).
parakeet = ["zwhisper-core/parakeet"]

[dev-dependencies]
tempfile = { workspace = true }
which = { workspace = true }
tokio = { workspace = true, features = ["signal", "rt", "macros", "time", "sync", "process", "io-util", "fs"] }
zwhisper-core = { path = "../zwhisper-core" }
dirs = { workspace = true }

[lints]
workspace = true
