[package]
name = "zwhisper-tray"
description = "zwhisper system tray indicator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[[bin]]
name = "zwhisper-tray"
path = "src/main.rs"

[dependencies]
# Tray depends ONLY on the wire contract crate (proxies + types).
# We deliberately do NOT depend on zwhisper-core so the tray binary
# does not transitively pull GStreamer / whisper.cpp / profile loader
# code — the wire strings (idle/starting/recording/stopping/failed)
# are part of the frozen contract and are mapped to the tray-local
# IconState enum in src/state.rs. See M4-plan § "Crate dependency
# graph".
zwhisper-ipc = { path = "../zwhisper-ipc" }
# M6 Group E: hotkey listener task + portal flow. Pulls the
# `portal` feature (default) for `AshpdAdapter`.
zwhisper-hotkey = { path = "../zwhisper-hotkey" }
zbus = { workspace = true }
zvariant = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
ksni = { workspace = true }
notify-rust = { workspace = true }
arboard = { workspace = true }
xdg = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# `test-fakes` exposes the `FakePortal` adapter used by the
# hotkey listener integration tests.
zwhisper-hotkey = { path = "../zwhisper-hotkey", features = ["test-fakes"] }
# M8 — `m8_icon_asset.rs` invokes `xmllint` via `Command` and
# probes for it via `which::which` before running so the test
# skips on hosts without libxml2 instead of hard-failing.
which = { workspace = true }

[lints]
workspace = true
